--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -12,8 +12,8 @@
 	<div class="row mt-2">
 		<div class="col-lg-4 col-md-6 matches-8">
 			<div class=" form-group">
-				<label>{{"shared.jobTitle" | translate}}</label>
-				<input appMarkAsterisk formControlName="title" type="text" class="form-control text-capitalize" [placeholder]="'shared.jobTitle' | translate"/>
+				<label>{{"shared.jobTitle" | translate}}<span class="required-asterisk">*</span></label>
+				<input formControlName="title" type="text" class="form-control text-capitalize" [placeholder]="'shared.jobTitle' | translate"/>
 			</div>
 			<app-control-messages [control]="f['title']"></app-control-messages>
 		</div>
@@ -21,7 +21,7 @@
 			<div class=" form-group">
 				<label>{{"userProfile.roleType" | translate }}</label>
 				<select formControlName="employer_role_type" class="form-control text-capitalize">
-					<option value="" selected="" >Select Role Type</option>
+					<option [value]="''" disabled >Select Role Type</option>
 					<option  value="Technical">Technical</option>
 					<option  value="Functional">Functional</option>
 					<option  value="Technofunctional">Technofunctional</option>
@@ -33,9 +33,9 @@
 	<div class="row mt-2">
 		<div class="col-lg-4 col-md-6 matches-8 ">
 			<div class=" form-group">
-				<label>{{"shared.jobType" | translate}}</label>
-				<select (change)="onChangeJobType($event?.target?.value)" appMarkAsterisk formControlName="type" class="form-control" name="type">
-					<option value="" selected="" >Select Job Type</option>
+				<label>{{"shared.jobType" | translate}}<span class="required-asterisk">*</span></label>
+				<select (change)="onChangeJobType($event?.target?.value)"  formControlName="type" class="form-control" name="type">
+					<option [value]="''" disabled >Select Job Type</option>
 					<option  value="1000">Full Time</option>
 					<option  value="1001">Part Time</option>
 					<option  value="1002">Contract</option>
@@ -54,8 +54,8 @@
 		</div>
 		<div class="col-lg-4 col-md-6 matches-8 d-flex">
 			<div class=" form-group w-50">
-				<label>{{"shared.pay" | translate}}</label>
-				<select appMarkAsterisk formControlName="salary_type" class="form-control" name="job-type">
+				<label>{{"shared.pay" | translate}}<span class="required-asterisk">*</span></label>
+				<select formControlName="salary_type" class="form-control" name="job-type">
 					<option value="" selected="" disabled="">{{"shared.select" | translate}} {{"shared.pay" | translate}}</option>
 					<option [value]="0">Hourly </option>
 					<option [value]="2">Monthly</option>
@@ -89,10 +89,9 @@
 	<div class="row mt-2">
 		<div class="col-lg-8 col-md-12">
 			<div class=" form-group">
-				<label >{{"shared.jobLocation" | translate }}</label>
-				<mat-form-field class="example-chip-list" style="width: 100%;" >
-					
-					<mat-chip-list #chipList aria-label="address">
+				<label >{{"shared.jobLocation" | translate }}<span class="required-asterisk">*</span></label>
+				<mat-form-field class="example-chip-list" style="width: 100%;">	
+					<mat-chip-list #chipList aria-label="address" >
 						<mat-chip *ngFor="let addresss of address;let i=index;" [selectable]="selectable"
 							[removable]="removable" (removed)="onRemove(i)">
 							{{addresss}}
@@ -110,11 +109,13 @@
 							(matChipInputTokenEnd)="add($event)">
 					</mat-chip-list>
 				</mat-form-field>
+				<app-control-messages [control]="t['job_locations']"></app-control-messages>
+				<small  id="jobLocationsErroe" class="text-danger" style="display:none;">{{'Field is required.'}}</small>
 			</div>	
 		</div>	
 		<div class="col-lg-4 col-md-6 matches-8">
 			<div class=" form-group">
-				<label>{{"shared.workTiming" | translate}}</label>
+				<label id="timeError">{{"shared.workTiming" | translate}}</label>
 				<div class="row mt-2">
 					<!--<div class="col-lg-6 col-md-6 ">
 						<input type="time"  formControlName="min" (change)="getValue($event,'min')" [max]="childForm['value']['jobInfo']['min']" class="form-control " >
@@ -195,8 +196,8 @@
 	<div class="row mt-2">
 		<div class="col-lg-4 col-md-6 matches-8">
 			<div class=" form-group">
-				<label>{{"userProfile.availability" | translate}}</label>
-				<select appMarkAsterisk formControlName="availability" class="form-control">
+				<label>{{"userProfile.availability" | translate}}<span class="required-asterisk">*</span></label>
+				<select  formControlName="availability" class="form-control">
 					<option [value]="null" disabled >{{"shared.select" | translate }}</option>
 					<option *ngFor="let type of availabilityArray" [value]="type.id">{{ type.text }}</option>
 				</select>
@@ -205,8 +206,8 @@
 		</div>
 		<div class="col-lg-4 col-md-6 matches-8">
 			<div class=" form-group">
-				<label>{{"userProfile.remote" | translate}} </label>
-				<div appMarkAsterisk class="mt-2">
+				<label>{{"userProfile.remote" | translate}} <span class="required-asterisk">*</span></label>
+				<div class="mt-2">
 					<div class="custom-control custom-radio custom-control-inline">
 						<input [value]="true" (click)="changeRemote('yes')" id="remote_PJ_Y" formControlName="remote" type="radio" class="custom-control-input">
 						<label class="custom-control-label" for="remote_PJ_Y">{{"shared.yes" | translate}}</label>
@@ -221,9 +222,9 @@
 		</div>
 		<div class="col-lg-4 col-md-6" *ngIf="showRemoteOption" style="margin-left:-12rem;">
 		<div class=" form-group">
-				<label>{{"jobs.remoteOption" | translate}}
+				<label>{{"jobs.remoteOption" | translate}}<span class="required-asterisk">*</span>
 				</label>
-				<div appMarkAsterisk class="pt-2">
+				<div  class="pt-2">
 					<button type="button" (click)="remoteOptions('0',$event)" id="domestic" class="btn btn-fltr" formControlName="remote_option">Domestic</button>
 					<button type="button" (click)="remoteOptions('1',$event)" id="worldwide" class="btn btn-fltr" formControlName="remote_option">worldwide</button>
 				</div>
@@ -250,8 +251,8 @@
 	<div class="row mt-2">
 		<div class="col-md-12">
 			<div class="form-group">
-				<label>{{"shared.jobDesc" | translate}} </label>
-				<angular-editor appMarkAsterisk formControlName="description" [config]="editorConfig" [placeholder]="'shared.description' | translate"></angular-editor>
+				<label>{{"shared.jobDesc" | translate}} <span class="required-asterisk">*</span></label>
+				<angular-editor formControlName="description" [config]="editorConfig" [placeholder]="'shared.description' | translate"></angular-editor>
 			</div>
 			<app-control-messages [control]="f['description']"></app-control-messages>
 		</div>
