--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -54,7 +54,7 @@
           </div>
           <div class=" form-group">
             <label>{{"shared.zipCode" | translate}}</label>
-            <input autocomplete="disabled" [maxLength]="8" autocomplete="disabled"  OnlyNumber="true" formControlName="zipcode" type="text" class="form-control"
+            <input autocomplete="disabled" [maxLength]="8" autocomplete="disabled"  formControlName="zipcode" type="text" class="form-control"
               [placeholder]="'shared.zipCode' | translate">
               <app-control-messages [control]="f['zipcode']"></app-control-messages>
           </div>
@@ -191,7 +191,7 @@
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="form-group">
-            <button [disabled]="!createCompanyForm.valid && !invalidMobile" type="submit" class="btn btn-theme-blue btn-block btn-lg">{{"shared.submit" | translate }}</button>
+            <button type="submit" class="btn btn-theme-blue btn-block btn-lg">{{"shared.submit" | translate }}</button>
           </div>
         </div>
       </div>
@@ -211,14 +211,14 @@
       </button>
     </div>
     <div class="modal-body">
-     <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="false" [aspectRatio]="1 / 1"
+      <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="false" [aspectRatio]="1 / 1"
         [autoCrop]="true" [resizeToWidth]="295" format="png" (imageCropped)="imageCropped($event)"
         (imageLoaded)="imageLoaded()" (loadImageFailed)="loadImageFailed($event)">
       </image-cropper>
     </div>
     <div class="modal-footer mt-3">
-      <button type="button" class="btn btn-gren" data-dismiss="modal" (click)="SetPreviousProfilePic()">{{"shared.cancel" | translate }}</button>
-      <button type="button" class="btn btn-gren" data-dismiss="modal" (click)="onImageCropSave()">{{"shared.save" | translate }}</button>
+      <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="SetPreviousProfilePic()">{{"shared.cancel" | translate }}</button>
+      <button type="button" class="btn btn-theme-blue" data-dismiss="modal" (click)="onImageCropSave()">{{"shared.save" | translate }}</button>
     </div>
   </form>
 </ng-template>
