--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -16,13 +16,14 @@
 				</div>
 			</div>
 			<small *ngIf="job_type_error" class="text-danger">{{"userProfile.jobTypeError" | translate }}</small>
+			<small  id="errjobtype" class="text-danger" style="display:none;">{{"userProfile.jobTypeError" | translate }}</small>
 		</div>
 	</div>
 	<div class="row mt-5 ">
 		<div class="col-lg-4 col-md-4 matches-8">
 			<div class=" form-group">
 				<label>{{"userProfile.rolesLookingFor" | translate }}</label>
-				<input formControlName="job_role" type="text" class="form-control text-capitalize" [placeholder]="'userProfile.rolesLookingFor' | translate">
+				<input appMarkAsterisk formControlName="job_role" type="text" class="form-control text-capitalize" [placeholder]="'userProfile.rolesLookingFor' | translate">
 				<app-control-messages [control]="f['job_role']"></app-control-messages>
 			</div>
 		</div>
@@ -39,6 +40,7 @@
 						<label class="custom-control-label" for="customRadioInline4">{{"shared.no" | translate }}</label>
 					</div>
 				</div>
+				<app-control-messages [control]="f['willing_to_relocate']"></app-control-messages>
 			</div>
 		</div>
 	</div>
@@ -47,7 +49,7 @@
 			<div class=" form-group">
 				<label>{{"userProfile.availability" | translate }}</label>
 				<select appMarkAsterisk formControlName="availability" class="form-control">
-					<option [value]="null" disabled>{{"shared.select" | translate }}</option>
+					<option [value]="''" disabled>{{"shared.select" | translate }}</option>
 					<option *ngFor="let type of availabilityArray" [value]="type.id">{{ type.text }}</option>
 				</select>
 				<app-control-messages [control]="f['availability']"></app-control-messages>
