--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -88,7 +88,7 @@
       <div class="col-lg-4 col-md-6 matches-8">
         <div class=" form-group">
           <label>{{"shared.zipCode" | translate}}</label>
-          <input appMarkAsterisk  OnlyNumber="true" formControlName="zipcode" type="text" class="form-control" [placeholder]="'shared.zipCode' | translate">
+          <input appMarkAsterisk formControlName="zipcode" type="text" class="form-control" [placeholder]="'shared.zipCode' | translate">
           <app-control-messages [control]="f['zipcode']"></app-control-messages>
         </div>
       </div>
@@ -105,7 +105,7 @@
 			<div class=" form-group">
 				<label>{{"userProfile.nationality" | translate }} </label> 
 				<select appMarkAsterisk formControlName="nationality" class="form-control" (change)="onChangeCountry($event.target.value)">
-					<option  disabled >Please Select {{"userProfile.nationality" | translate }}</option>
+					<option value=null disabled>Please Select {{"userProfile.nationality" | translate }}</option>
 					<option *ngFor="let name of nationality" value={{name.id}}>{{name.nicename}}</option>
 				  </select>		
 			  <app-control-messages [control]="f['nationality']"></app-control-messages>							  
@@ -134,12 +134,15 @@
 							<mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
 						</mat-chip>
 						<input placeholder=""
+						    id="clients_works"
 							[matChipInputFor]="chipList"
 							[matChipInputSeparatorKeyCodes]="separatorKeysCodes"
 							[matChipInputAddOnBlur]="addOnBlur"
-							(matChipInputTokenEnd)="addEmplyee($event)">
+							(matChipInputTokenEnd)="addEmplyee($event)"
+							>
 					</mat-chip-list>
 				</mat-form-field>
+				<app-control-messages [control]="f['clients_worked']"></app-control-messages>
 			</div>	
 		</div>	
 	</div>
@@ -246,6 +249,7 @@
 						</mat-option>
 					</mat-autocomplete>
 				</mat-form-field>
+				<app-control-messages [control]="f['visa_type']"></app-control-messages>
 			</div>	
 		</div>	
 	</div>
@@ -259,6 +263,7 @@
 		<ng-container [formGroup]="ticket">
 			<div class="col-lg-4 col-md-4 matches-33">
 				<ngx-select
+				  id="langknw"
 				  class="text-capitalize"
 				  [placeholder]="'Select Language'"
 				  [items]="languageSource"
@@ -462,8 +467,8 @@
             </image-cropper>
         </div>
         <div class="modal-footer mt-3">
-            <button type="button" class="btn btn-gren" data-dismiss="modal" (click)="SetPreviousProfilePic()">Cancel</button>
-            <button type="button" class="btn btn-gren" data-dismiss="modal" (click)="onImageCropSave()">Save</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="SetPreviousProfilePic()">Cancel</button>
+            <button type="button" class="btn btn-theme-blue" data-dismiss="modal" (click)="onImageCropSave()">Save</button>
         </div>
     </form>
 </ng-template>
