--- a/frontend/src/app/shared/component/modal/register-form/register-form.component.html
+++ b/frontend/src/app/shared/component/modal/register-form/register-form.component.html
@@ -29,8 +29,16 @@
         </div>
         <app-control-messages [control]="f['lastName']"></app-control-messages>
       </div>
+	  <div class="form-group" *ngIf="router?.url.includes('employer') || router?.url.includes('agency')">
+        <label>{{"shared.companyName" | translate }}</label>
+        <div appMarkAsterisk class="input-with-icon">
+          <input autocomplete="disabled" type="text" class="form-control" [placeholder]="'Company Name'" formControlName="companyName">
+          <i class="fas fa-building"></i>
+        </div>
+        <app-control-messages [control]="f['companyName']"></app-control-messages>
+      </div>
       <div class="form-group">
-        <label>{{"auth.email" | translate }}</label>
+        <label>{{"shared.emailAddress" | translate }}<small *ngIf="router?.url.includes('employer')" class="text-secondary"> (Company Email Address)</small></label>
         <div appMarkAsterisk class="input-with-icon">
           <input type="text" autocomplete="disabled" style="text-transform: lowercase;" class="form-control" [placeholder]="'Email Address'" formControlName="email">
           <i class="fas fa-envelope"></i>
@@ -40,18 +48,10 @@
         </small>
         <app-control-messages [control]="f['email']"></app-control-messages>
       </div>
-      <div class="form-group" *ngIf="router?.url.includes('employer') || router?.url.includes('agency')">
-        <label>{{"shared.companyName" | translate }}</label>
-        <div appMarkAsterisk class="input-with-icon">
-          <input autocomplete="disabled" type="text" class="form-control" [placeholder]="'Company Name'" formControlName="companyName">
-          <i class="fas fa-industry"></i>
-        </div>
-        <app-control-messages [control]="f['companyName']"></app-control-messages>
-      </div>
       <div class="form-group">
         <label>{{"auth.password" | translate }} </label>
         <div appMarkAsterisk class="input-with-icon input-group">
-          <input appPassword type="password" class="form-control" [placeholder]="'Password'" formControlName="password">
+          <input appPassword id="regpass" type="password" class="form-control" [placeholder]="'Password'" formControlName="password">
           <i class="fas fa-key"></i>
         </div>
         <app-control-messages [control]="f['password']"></app-control-messages>
@@ -59,14 +59,15 @@
       <div class="form-group">
         <div class="custom-control custom-checkbox">
         <input autocomplete="disabled" type="checkbox" class="custom-control-input" id="termsService" formControlName="isAgreed">
-        <label class="custom-control-label" for="termsService">{{"auth.terms" | translate }} <a href="#">View</a></label>
+        <label class="custom-control-label" for="termsService">{{"auth.terms" | translate }} <a [routerLink]="['/terms-and-conditions']" href="javascript:;" target="_blank">View</a></label>
         </div>
+		<app-control-messages [control]="f['isAgreed']"></app-control-messages>
       </div>
       <div
        class="form-group mt-5">
         <button type="submit" [ngClass]="{'btn-theme-blue': router?.url.includes('employer'), 'btn-theme-orange':router?.url.includes('agency'), 'btn-theme-green':router?.url.includes('user') }"
-         class="btn btn-block btn-lg" [disabled]="(registerForm.invalid || (!registerForm?.value?.isAgreed))">
-         <span [hidden]="isLoading">{{"shared.submit" | translate }}</span>
+         class="btn btn-block btn-lg">
+         <span [hidden]="isLoading">{{"auth.register" | translate }}</span>
          <span [hidden]="!isLoading">
            <i class="fa fa-spinner" aria-hidden="true"></i>
          </span>
