--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -101,7 +101,7 @@ a:hover {
   width: 6px;
     height: 6px;
     border-radius:25px;
-    opacity: 0!important;
+    /* opacity: 0!important; */
 }
 
 /* Track */
@@ -142,7 +142,7 @@ a:hover {
     padding: .6rem 1.75rem;
     font-size: 1.0rem;
     line-height: 1.75;
-    border-radius: .3rem;
+    border-radius: 10px;
 }
 .btn-theme-blue {
     color: #fff;
@@ -493,7 +493,7 @@ a:hover {
     color: #848484;
 }
 .modal-content {
-    border-radius: 1rem !important;
+    border-radius: 0.5rem;
     font-family: 'Nunito', sans-serif !important;
     border: none !important;
 }
@@ -579,6 +579,7 @@ a:hover {
     background-color: transparent;
     border: 0;
     border-bottom: 1px solid #f8f8f8;
+	cursor:pointer;
 }
 .theme-nav .dropdown-item:hover{
 	background: #ffffff;
@@ -1636,7 +1637,7 @@ a:hover {
     font-size: 14px;
     min-height: 26px;
     font-weight: 600;
-    text-overflow: ellipsis;
+    /* text-overflow: ellipsis; */
     overflow: hidden;
     /* min-width: 350px; */
     white-space: nowrap;
@@ -3823,7 +3824,7 @@ ul.timeline > li span:hover {
    font-weight:bolder;
 }
 .slideanimations{
-  animation: moveleft 0.6s;
+  animation: moveleft 0.9s;
 }
 
 @keyframes moveleft {
@@ -3835,7 +3836,7 @@ ul.timeline > li span:hover {
     }
 }
 .slidearight{
-  animation: moveright 0.6s;
+  animation: moveright 1.1s;
 }
 
 @keyframes moveright {
@@ -3880,7 +3881,7 @@ ul.timeline > li span:hover {
     font-size: 14px;
     min-height: 26px;
     font-weight: 600;
-    width: 250px;
+    /*width: 250px;*/
 }
 
 
@@ -3953,7 +3954,7 @@ ul.timeline > li span:hover {
 }
 .ee-count {
     position: absolute;
-    top: -74px;
+    top: 29px;
     right: 46px;
 }
 .ee-count .count-num {
@@ -4024,4 +4025,42 @@ color: #11b771;
 	margin-right: 77px;
     margin-left: 77px;
 }
+policy-sec {
+    font-size: 14px;
+}
+.policy-sec p {
+    font-size: 14px;
+}
+.policy-sec h3 {
+    font-size: 18px;
+    font-weight: 700;
+    background: #e6fbff;
+    padding: 7px 10px;
+    border-bottom: 2px solid #2cd7fe;
+    color: #333;
+    margin: 30px 0 15px;
+}
+.policy-sec table {
+        border: 1px solid #edeff2;
+    font-weight: 600;
+}
+
+.policy-sec .table td, .policy-sec .table th {
+   white-space: unset!important;
+}
+
+.match-details {
+    position: absolute;
+    top: 105px;
+    z-index: 9;
+	width: 46%;
+	background: #fff;
+}
+
+.e-quick-popup-wrapper .e-event-popup .e-date-time{
+	display:none !important;
+}
+
+
+
 
